--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,8 @@ services:
             - POSTGRES_PASSWORD=${DB_PASSWORD}
         volumes:
             - postgres_data:/var/lib/postgresql/data
+        ports:
+            - "5432:5432"
 
     redis:
         image: redis:7
