--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,8 @@ services:
         build: .
         ports:
             - "8000:80"
-        volumes:
-            - .:/var/www/html
+#        volumes:
+#            - .:/var/www/html
         depends_on:
             - redis
             - postgres
