--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "php": "^8.2",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
-        "tymon/jwt-auth": "^2.1"
+        "tymon/jwt-auth": "^2.1",
+        "wotz/laravel-swagger-ui": "*"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^3.5",
