--- a/.env
+++ b/.env
@@ -48,14 +48,14 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=
 REDIS_PORT=6379
 
-MAIL_MAILER=log
-MAIL_SCHEME=null
-MAIL_HOST=127.0.0.1
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_FROM_ADDRESS="hello@example.com"
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_MAILER=smtp
+MAIL_HOST=in-v3.mailjet.com
+MAIL_PORT=587
+MAIL_USERNAME=
+MAIL_PASSWORD=
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=darfik43@gmail.com
+MAIL_FROM_NAME="task-manager-php"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
