chore: add new email for confirmation

--- a/.env
+++ b/.env
@@ -54,7 +54,7 @@ MAIL_PORT=587
 MAIL_USERNAME=
 MAIL_PASSWORD=
 MAIL_ENCRYPTION=tls
-MAIL_FROM_ADDRESS=phptaskmanager@proton.me
+MAIL_FROM_ADDRESS=phptaskmanager@outlook.com
 MAIL_FROM_NAME="task-manager-php"
 
 AWS_ACCESS_KEY_ID=
